syntax = "proto3";

option java_multiple_files = true;
option csharp_namespace = "StarRail.Api.Protos";

package starrail;

service StarRailService {
	rpc WishHistory(WishHistoryRequest) returns (WishHistoryResponse);
}

message WishHistoryRequest {
}

message WishHistory {
	string banner = 1;
	WishHistoryDetail detail = 2;
}

message WishHistoryResponse {
	repeated WishHistory wish_histories = 1;
}

message WishHistoryDetail {
	int64 total_pulls = 1;
	int32 pity = 2;
	repeated WishHistoryEvent events = 3;
}

message WishHistoryEvent {
	string item_name = 1;
	int32 pull_index = 2;
}